--- a/src/app/log-insuccess/log-insuccess.component.html
+++ b/src/app/log-insuccess/log-insuccess.component.html
@@ -1,22 +1,2 @@
-<h1>Welcome To Our Website</h1>
-<div class="outer-menu">
-  <input class="checkbox-toggle" type="checkbox" />
-  <div class="hamburger">
-    <div></div>
-  </div>
-  <div class="menu">
-    <div>
-      <div>
-        <ul>
-            <li><a routerLink="/showtransactions"  routerLinkActive="active" >View Transactions</a></li>
-           
-            <li><a routerLink="/upload"  routerLinkActive="active">Upload</a></li>
-            
-          </ul>
-          
-        
-      </div>
-    </div>
-  </div>
-</div>
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<h1>LOGIN SUCCESS COMPONENT</h1>
