--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -1,1 +1,10 @@
-<p>upload works!</p>
+
+     
+<div class="from-group">   
+     <label for="file">
+      File Upload:
+     </label>
+   <input type="file" class="form-control" (change)="onSelectFile($event)" style="height: 100%;">
+ </div>
+<router-outlet></router-outlet>
+ 
