--- a/src/app/showtransactions/showtransactions.component.html
+++ b/src/app/showtransactions/showtransactions.component.html
@@ -1,2 +1,33 @@
+<div class="col-md-6">
+  <h2> User Details</h2>
+  
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <th class="hidden">Id</th>
+      <th>Transaction Id</th>
+      <th>ref</th>
+      <th>dt</th>
+      <th>payer Name</th>
+      <th>payer Acc No</th>
+      <th>payee Name</th>
+      <th>paye Acc No</th>
+      <th>Amount</th>
+      <th>valid</th>
+      <th>sancitioned</th>
+    </tr>
+  </thead>
 
-
+    <tbody>
+    <tr *ngFor="let user of users">
+      <td class="hidden"></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      
+    </tr>
+    </tbody>
+  </table>
+  </div>
+  
+  
