--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -1,3 +1,18 @@
+<header>
+    
+  <mat-toolbar color="primary" class="mat-elevation-z20">
+
+<span><mat-icon>eco</mat-icon> Sanction Screening</span>
+<div class="spacer"></div>
+<button *ngIf="loginService.isUserLoggedIn()" routerLink="/home" mat-button><mat-icon>home</mat-icon>Home</button>
+
+<button *ngIf="loginService.isUserLoggedIn()"  mat-button  routerLink="/upload"  routerLinkActive="mat-accent">Upload </button>
+<button *ngIf="!loginService.isUserLoggedIn()"  mat-button routerLink="/login" class="nav-link">Login</button>
+<button  *ngIf="loginService.isUserLoggedIn()" mat-raised-button color="accent" routerLink="/login" class="nav-link">LogOut</button>
+
+</mat-toolbar>
+</header>
+<br><br><br><br><br><br><br><br>
 <div *ngIf="currentFile" class="progress">
   <div
     class="progress-bar progress-bar-info progress-bar-striped"
@@ -10,25 +25,20 @@
     {{ progress }}%
   </div>
 </div>
-
-<label class="btn btn-default">
+<h1 style="margin-left: 150px; color: blueviolet;"> Upload The File</h1>
+<br>
+<label class="btn btn-outline-primary" style="margin-left: 150px;">
   <input type="file" (change)="selectFile($event)" />
 </label>
 
-<button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">
+<button mat-raised-button color="primary"  class=" light-button" style="margin-left: 150px;" [disabled]="!selectedFiles" (click)="upload()">
   Upload
 </button>
 
 <div class="alert alert-light" role="alert">{{ message }}</div>
 
-<div class="card">
-  <div class="card-header">List of Files</div>
-  <ul
-    class="list-group list-group-flush"
-    *ngFor="let file of fileInfos | async"
-  >
-    <li class="list-group-item">
-      <a href="{{ file.url }}">{{ file.name }}</a>
-    </li>
-  </ul>
-</div>
+
+<br><br><br>
+<button mat-raised-button color="primary" class=" light-button" style="margin-left: 150px;" [disabled]="!selectedFiles" (click)="onclicktransaction()">
+ View Transactions
+</button>
