--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -35,10 +35,10 @@
   Upload
 </button>
 
-<div class="alert alert-light" role="alert">{{ message }}</div>
+<div class="alert alert-light" role="alert" style="color: crimson; ">{{ message }}</div>
 
 
 <br><br><br>
-<button mat-raised-button color="primary" class=" light-button" style="margin-left: 150px;" [disabled]="!selectedFiles" (click)="onclicktransaction()">
+<button mat-raised-button color="primary" class=" light-button" style="margin-left: 150px;" (click)="onclicktransaction()">
  View Transactions
 </button>
