--- a/src/app/showtransactions/showtransactions.component.html
+++ b/src/app/showtransactions/showtransactions.component.html
@@ -1,3 +1,20 @@
+
+<header>
+    
+  <mat-toolbar color="primary" class="mat-elevation-z20">
+
+<span><mat-icon>eco</mat-icon> Sanction Screening</span>
+<div class="spacer"></div>
+<button *ngIf="loginService.isUserLoggedIn()" routerLink="/home" mat-button><mat-icon>home</mat-icon>Home</button>
+
+<button *ngIf="loginService.isUserLoggedIn()"  mat-button  routerLink="/upload"  routerLinkActive="mat-accent">Upload </button>
+<button *ngIf="!loginService.isUserLoggedIn()"  mat-button routerLink="/login" class="nav-link">Login</button>
+<button  *ngIf="loginService.isUserLoggedIn()" mat-raised-button color="accent" routerLink="/login" class="nav-link">LogOut</button>
+
+</mat-toolbar>
+</header>
+
+
 <div class="col-md-6">
   <br><br><br><br>
   <h1 style="color: blueviolet;font-size: 50px;
@@ -7,7 +24,7 @@
     <thead>
     <tr>
       <th class="hidden">Transaction Id</th>
-      <th>Date</th>
+      <th >Date</th>
       <th>Payer Name</th>
      
       <th>Payee Name</th>
