--- a/src/app/showtransactions/showtransactions.component.html
+++ b/src/app/showtransactions/showtransactions.component.html
@@ -20,7 +20,7 @@
   <h1 style="color: blueviolet;font-size: 50px;
   margin-left: 350px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Transaction Details</h1>
   <br><br><br>
-  <table class="table table-striped" style="margin-left: 200px;  " border="1">
+  <table class="table table-striped" class="blueTable" style="margin-left: 200px;  " border="1">
     <thead>
     <tr>
       <th class="hidden">Transaction Id</th>
