--- a/src/app/showtransactions/showtransactions.component.html
+++ b/src/app/showtransactions/showtransactions.component.html
@@ -37,9 +37,9 @@
 
     <tbody>
     <tr *ngFor="let user of users">
-      <td class="hidden">{{user.transaction_id}}</td>
+      <td class="hidden">{{user.id}}</td>
       
-      <td>{{user.dt}}</td>
+      <td>{{user.date}}</td>
       <td>{{user.payerName}}</td>
     
       <td>{{user.payeeName}}</td>
